resolve EF connection problem

--- a/SportStore/SportStore.WebUI/Views/Product/List.cshtml
+++ b/SportStore/SportStore.WebUI/Views/Product/List.cshtml
@@ -8,7 +8,7 @@
 {
     <div class="item">
         <h3> @p.Name</h3>
-        @p.Decription
+        @p.Description
         <h4>@p.Price.ToString("c")</h4>
     </div>
 }
