--- a/SportStore/SportStore.WebUI/Content/Site.css
+++ b/SportStore/SportStore.WebUI/Content/Site.css
@@ -28,8 +28,7 @@ div#content
     padding: 1em;
 }
 
-div#categories
-{
+div#categories {
     float: left;
     width: 8em;
     padding: .3em;
@@ -86,3 +85,16 @@ div.pager a.selected
     background-color: #353535;
     color:white;
 }
+
+div#categories a {
+    font: bold 1.1em "Arial Narrow", "Franklin Gothic Medium", Arial;
+    display: block;
+    text-decoration: none;
+    padding: .6em;
+    color: black;
+    border-bottom: 1px solid silver;
+}
+
+div#categories a.selected { background-color: #666; color: white;}
+div#categories a:hover {background-color: #CCC;}
+div#categories a.selected:hover {background-color: #666;}
