--- a/SportStore/SportStore.WebUI/Views/Cart/Checkout.cshtml
+++ b/SportStore/SportStore.WebUI/Views/Cart/Checkout.cshtml
@@ -8,6 +8,7 @@
 Please enter your details, and we'll ship your goods right away!
 @using (Html.BeginForm())
 {
+    @Html.ValidationSummary()
     <h3>Ship to </h3>
     <div>Name: @Html.EditorFor(x => x.Name) </div>
     <h3>Address</h3>
@@ -15,7 +16,7 @@ Please enter your details, and we'll ship your goods right away!
     <div>Line 2: @Html.EditorFor(x => x.Line2)</div>
     <div>Line 3: @Html.EditorFor(x => x.Line3)</div>
     <div>City: @Html.EditorFor(x => x.City)</div>
-    <div>State: @Html.EditorFor(x => x.City)</div>
+    <div>State: @Html.EditorFor(x => x.State)</div>
     <div>Zip: @Html.EditorFor(x => x.Zip)</div>
     <div>Country: @Html.EditorFor(x => x.Country)</div>
     <h3>Options</h3>
