Implement CRUD admin panel view

--- a/SportStore/SportStore.WebUI/Content/Admin.css
+++ b/SportStore/SportStore.WebUI/Content/Admin.css
@@ -14,17 +14,17 @@ div#content {
     padding: .9em;
 }
 
-table.grid td, table.grid th {
+table.Grid td, table.Grid th {
     border-bottom: 1px dotted gray;
     text-align:left;
 }
 
-table.grid {
+table.Grid {
     border-collapse: collapse; 
     width:100%;
 }
 
-table.grid th.NumericCol, table.grid td.NumericCol {
+table.Grid th.NumericCol, table.Grid td.NumericCol {
     text-align: right;
     padding-right: 1em;
 }
